--- a/processing-service/build.gradle
+++ b/processing-service/build.gradle
@@ -1,9 +1,13 @@
 plugins {
-    id 'java-library'
+    id 'application'
 }
 
 group 'de.benkan'
 version '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'de.benkan.processing.ProcessingApp'
+}
 
 java {
     toolchain {
@@ -16,13 +20,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation project(':data-models')
+    implementation project(':shared-lib')
+
     implementation 'com.google.inject:guice:5.0.1'
+    implementation 'io.dropwizard:dropwizard-core:2.0.25'
     implementation 'io.projectreactor:reactor-core:3.4.12'
-    implementation 'jakarta.validation:jakarta.validation-api:3.0.1'
-    implementation 'org.apache.kafka:kafka-clients:2.8.0'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
