--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'microservice-zoo'
 include 'data-models'
 include 'shared-lib'
 include 'frontend-service'
+include 'processing-service'
 
