Resolving issues writing to kafka
- in both local and k8s setup
- issue was missing @Singleton annotation

--- a/dev/infra/kafka-deployment.yaml
+++ b/dev/infra/kafka-deployment.yaml
@@ -20,15 +20,16 @@ spec:
           ports:
             - containerPort: 9092
             - containerPort: 19092
+            - containerPort: 29092
           env:
             - name: KAFKA_ZOOKEEPER_CONNECT
-              value: "zookeeper:2181"
+              value: "zookeeper-service:2181"
             - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-              value: "INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT"
+              value: "INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT,OUTLOCAL:PLAINTEXT"
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: "INSIDE://:9092,OUTSIDE://localhost:19092"
+              value: "INSIDE://:9092,OUTSIDE://kafka-service:19092,OUTLOCAL://localhost:29092"
             - name: KAFKA_LISTENERS
-              value: "INSIDE://:9092,OUTSIDE://:19092"
+              value: "INSIDE://:9092,OUTSIDE://:19092,OUTLOCAL://:29092"
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
               value: "INSIDE"
             - name: KAFKA_CREATE_TOPICS
