--- a/frontend-service/dev/config-local.yaml
+++ b/frontend-service/dev/config-local.yaml
@@ -1,5 +1,5 @@
 kafkaProducer:
-  bootstrapServer: kafka-service:19092
+  bootstrapServer: localhost:29092
   topic: messages
   acks: all
   retries: 0
