--- a/frontend-service/build.gradle
+++ b/frontend-service/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'de.benkan'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 application {
     mainClass = 'de.benkan.frontend.FrontendApp'
@@ -13,6 +13,21 @@ java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'de.benkan.frontend.FrontendApp',
+        )
+    }
+
+    // include all dependencies as a fat jar
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 repositories {
@@ -25,9 +40,11 @@ dependencies {
 
     implementation 'com.google.inject:guice:5.0.1'
     implementation 'io.dropwizard:dropwizard-core:2.0.25'
-    implementation 'io.projectreactor:reactor-core:3.4.12'
+    implementation 'io.projectreactor:reactor-core:3.4.13'
     implementation 'javax.validation:validation-api:2.0.1.Final'
 
+    testImplementation 'io.projectreactor:reactor-test:3.4.13'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
