--- a/processing-service/build.gradle
+++ b/processing-service/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'de.benkan'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 application {
     mainClass = 'de.benkan.processing.ProcessingApp'
@@ -25,7 +25,7 @@ dependencies {
 
     implementation 'com.google.inject:guice:5.0.1'
     implementation 'io.dropwizard:dropwizard-core:2.0.25'
-    implementation 'io.projectreactor:reactor-core:3.4.12'
+    implementation 'io.projectreactor:reactor-core:3.4.13'
     implementation 'javax.validation:validation-api:2.0.1.Final'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
