Resolve deserializing from Kafka
There was a class cast exception because the generic type could not be properly respected. And therefore the default behavior of Jackson was used and messages have been deserialized to LinkedHashMap instead.

--- a/frontend-service/dev/config-local.yaml
+++ b/frontend-service/dev/config-local.yaml
@@ -1,6 +1,11 @@
 kafkaProducer:
   bootstrapServer: localhost:29092
   topic: messages
+  keySerializer: org.apache.kafka.common.serialization.StringSerializer
+  valueSerializer: de.benkan.frontend.stream.serialization.MessageSerializer
   acks: all
   retries: 0
   lingerMs: 1
+
+logging:
+  level: DEBUG
