--- a/frontend-service/build.gradle
+++ b/frontend-service/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'io.dropwizard:dropwizard-core:2.0.25'
     implementation 'io.projectreactor:reactor-core:3.4.13'
     implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'org.apache.kafka:kafka-clients:2.8.0' // TODO why is this dependency not transitively present via :shared-lib?
 
     testImplementation 'io.projectreactor:reactor-test:3.4.13'
     testImplementation 'org.assertj:assertj-core:3.21.0'
