Resolve Gradle warnings about missing dependency declarations
Which seems to be not really a problem, but Gradle 7.2 logs that multiple times when building the project, which creates noise.

--- a/frontend-service/build.gradle
+++ b/frontend-service/build.gradle
@@ -16,6 +16,7 @@ java {
 }
 
 jar {
+    dependsOn(':data-models:jar', ':shared-lib:jar')
     manifest {
         attributes(
                 'Main-Class': 'de.benkan.frontend.FrontendApp',
