Resolve TODO and renaming of lib
- Resolve TODO: transitively forward the kafka dependency by using api
- Rename: make library kafka specific

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'microservice-zoo'
 include 'data-models'
-include 'shared-lib'
+include 'shared-kafka'
 include 'frontend-service'
 include 'processing-service'
 
