--- a/frontend-service/build.gradle
+++ b/frontend-service/build.gradle
@@ -16,7 +16,7 @@ java {
 }
 
 jar {
-    dependsOn(':data-models:jar', ':shared-lib:jar')
+    dependsOn(':data-models:jar', ':shared-kafka:jar')
     manifest {
         attributes(
                 'Main-Class': 'de.benkan.frontend.FrontendApp',
@@ -37,13 +37,12 @@ repositories {
 
 dependencies {
     implementation project(':data-models')
-    implementation project(':shared-lib')
+    implementation project(':shared-kafka')
 
     implementation 'com.google.inject:guice:5.0.1'
     implementation 'io.dropwizard:dropwizard-core:2.0.25'
     implementation 'io.projectreactor:reactor-core:3.4.13'
     implementation 'javax.validation:validation-api:2.0.1.Final'
-    implementation 'org.apache.kafka:kafka-clients:2.8.0' // TODO why is this dependency not transitively present via :shared-lib?
 
     testImplementation 'io.projectreactor:reactor-test:3.4.13'
     testImplementation 'org.assertj:assertj-core:3.21.0'
