--- a/processing-service/build.gradle
+++ b/processing-service/build.gradle
@@ -16,7 +16,7 @@ java {
 }
 
 jar {
-    dependsOn(':data-models:jar', ':shared-lib:jar')
+    dependsOn(':data-models:jar', ':shared-kafka:jar')
     manifest {
         attributes(
                 'Main-Class': 'de.benkan.processing.ProcessingApp',
@@ -37,13 +37,12 @@ repositories {
 
 dependencies {
     implementation project(':data-models')
-    implementation project(':shared-lib')
+    implementation project(':shared-kafka')
 
     implementation 'com.google.inject:guice:5.0.1'
     implementation 'io.dropwizard:dropwizard-core:2.0.25'
     implementation 'io.projectreactor:reactor-core:3.4.13'
     implementation 'javax.validation:validation-api:2.0.1.Final'
-    implementation 'org.apache.kafka:kafka-clients:2.8.0' // TODO why is this dependency not transitively present via :shared-lib?
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
