--- a/shared-kafka/build.gradle
+++ b/shared-kafka/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'com.google.inject:guice:5.0.1'
     implementation 'io.projectreactor:reactor-core:3.4.13'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.1'
-    implementation 'org.apache.kafka:kafka-clients:2.8.0'
+
+    api 'org.apache.kafka:kafka-clients:2.8.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
