Add module: SpringBoot settings service
including container building and k8s resources

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'data-models'
 include 'shared-kafka'
 include 'frontend-service'
 include 'processing-service'
+include 'settings-service'
 
