--- a/frontend-service/dev/config-local.yaml
+++ b/frontend-service/dev/config-local.yaml
@@ -1,3 +1,6 @@
+logging:
+  level: INFO
+
 kafkaProducer:
   bootstrapServer: localhost:29092
   topic: messages
@@ -7,5 +10,7 @@ kafkaProducer:
   retries: 0
   lingerMs: 1
 
-logging:
-  level: DEBUG
+settingsClientConfig:
+  hostName: http://localhost
+  port: 8911
+  basePath: /api/v1
