--- a/frontend-service/dev/config.yaml
+++ b/frontend-service/dev/config.yaml
@@ -1,3 +1,6 @@
+logging:
+  level: INFO
+
 kafkaProducer:
   bootstrapServer: kafka-service:19092
   topic: messages
@@ -7,5 +10,7 @@ kafkaProducer:
   retries: 0
   lingerMs: 1
 
-logging:
-  level: INFO
+settingsClientConfig:
+  hostName: http://settings-service
+  port: 8911
+  basePath: /api/v1
