--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'shared-kafka'
 include 'frontend-service'
 include 'processing-service'
 include 'settings-service'
+include 'settings-client'
 
