Set java 17 toolchain consistently in Groovy syntax

--- a/settings-service/build.gradle
+++ b/settings-service/build.gradle
@@ -6,11 +6,16 @@ plugins {
 
 group 'de.benkan'
 version '1.0.0'
-sourceCompatibility = '17'
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
+    }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
