--- a/frontend-service/build.gradle
+++ b/frontend-service/build.gradle
@@ -11,7 +11,7 @@ application {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
