--- a/settings-client/build.gradle
+++ b/settings-client/build.gradle
@@ -4,7 +4,12 @@ plugins {
 
 group 'de.benkan'
 version '1.0.0'
-sourceCompatibility = '17'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
