--- a/settings-client/build.gradle
+++ b/settings-client/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.1'
+    implementation 'javax.ws.rs:javax.ws.rs-api:2.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
