--- a/settings-service/build.gradle
+++ b/settings-service/build.gradle
@@ -45,8 +45,10 @@ repositories {
 dependencies {
     implementation project(':data-models')
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    runtimeOnly 'org.postgresql:postgresql:42.3.1'
 
     // compileOnly 'org.projectlombok:lombok'
     // annotationProcessor 'org.projectlombok:lombok'
