--- a/settings-service/src/main/resources/application.properties
+++ b/settings-service/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8911
 server.servlet.context-path=/api/v1
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:5432/postgres
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
