--- a/settings-service/build.gradle
+++ b/settings-service/build.gradle
@@ -53,8 +53,10 @@ dependencies {
     // compileOnly 'org.projectlombok:lombok'
     // annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
+    testRuntimeOnly 'com.h2database:h2:1.4.200'
 }
 
 test {
